--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
 @import url('fonts.css');
 
 /* Global Styles */
-
 .container {
     margin: 0 auto;
     max-width: 1170px;
@@ -11,10 +10,10 @@
 .nav-container {
     width: 100%;
     height: 60%;
-    background-color: #ce192f;
+    background-color: #1b1e24;
 }
 .nav-wrapper {
-    background-color: #ce192f;
+    background-color: #1b1e24;
     max-width: 1170px;
     margin: 0 auto;
     align-items: center;
@@ -31,6 +30,10 @@
     color: white;
     font-size: 20px;
     user-select: none;
+    transition: all 0.3s;
+}
+.nav a:hover {
+    color: #ce192f;
 }
 .logowrp {
     display: flex;
@@ -65,3 +68,42 @@
     background-color: white;
     color: #ce192f;
 }
+/* Auth Styles */
+.auth {
+    display: none;
+    width: 550px;
+    margin-top: 150px;
+    height: 500px;
+    justify-content: center;
+    border-radius: 15px;
+    align-items: center;
+    background-color: #1b1e24d7;
+}
+.login {
+    width: 100%;
+}
+.login h2 {
+    text-align: center;
+    font-size: 40px;
+    transform: translateY(-90px);
+    color: white;
+}
+.login form {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    color: white;
+    margin: 0 auto;
+}
+.login form input {
+    padding: 10px 5px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border-width: 1px;
+}
+.login form input:focus{
+    border-width: 1px;
+    
+}
+/* KeyFrames */
