--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,14 @@
 .login h2 {
     text-align: center;
     font-size: 40px;
-    transform: translateY(-90px);
+    transform: translateY(-60px);
     color: white;
+}
+.avttext  {
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    transform: translateY(-50px);
 }
 .login form {
     display: flex;
@@ -106,4 +112,97 @@
     border-width: 1px;
     
 }
+#loginbutton { 
+    padding: 10px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #ce192f;
+    border-width: 0;
+    border-radius: 5px;
+    color: white;
+    font-size: 20px;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+#loginbutton:hover {
+    font-size: 21px;
+}
+.regtext {
+    margin-top: 10px;
+    text-align: center;
+    user-select: none;
+}
+.regtext span {
+    color: #eb2038;
+    cursor: pointer;
+}
+/* reg styles */
+.regstyle {
+    display: none;
+    width: 550px;
+    margin-top: 150px;
+    padding: 80px;
+    justify-content: center;
+    border-radius: 15px;
+    align-items: center;
+    background-color: #1b1e24d7;
+}
+.register {
+    width: 100%;
+}
+.register h2 {
+    text-align: center;
+    font-size: 40px;
+    transform: translateY(-60px);
+    color: white;
+}
+.regtxt {
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    transform: translateY(-50px);
+}
+.register form {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    color: white;
+    margin: 0 auto;
+}
+.register form input {
+    padding: 10px 5px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border-width: 1px;
+}
+.register form input:focus{
+    border-width: 1px;
+    
+}
+#registerbutton { 
+    padding: 10px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #ce192f;
+    border-width: 0;
+    border-radius: 5px;
+    color: white;
+    font-size: 20px;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+#registerbutton:hover {
+    font-size: 21px;
+}
+.avttxt {
+    margin-top: 10px;
+    text-align: center;
+    user-select: none;
+}
+.avttxt span {
+    color: #eb2038;
+    cursor: pointer;
+}
+/* nav-configs */
 /* KeyFrames */
